--- a/BookReviewApp.Web/Views/Books/Create.cshtml
+++ b/BookReviewApp.Web/Views/Books/Create.cshtml
@@ -17,7 +17,7 @@
 
             <div class="form-group">
                 <label asp-for="AuthorId" class="control-label">Author</label>
-                <select asp-for="AuthorId" asp-items="ViewBag.Authors" class="form-control">
+                <select asp-for="AuthorId" class="form-control" asp-items="@(new SelectList(ViewBag.Authors, "AuthorId", "Name"))">
                     <option value="">-- Select Author --</option>
                 </select>
                 <span asp-validation-for="AuthorId" class="text-danger"></span>
